test/test_12111624_6.out
Error type B at Line 5: Missing specifier
Error type B at Line 3: Missing specifier
