test/test_12111624_6.spl
int main(){
    int a;
    b;
    int c;
    d;
    int e;
    f;
    g;
    
}